--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions.html
@@ -317,8 +317,8 @@
 	<li><a href="###">Request a Statement of Contributions by mail</a></li><br>
 	</ul>
 
-<a href="###">View your estimated monthly CPP benefits</a><br><br>
-<a href="###">Return to My Service Canada Account home page</a><br><br>
+<a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/estimated-monthly-cpp-benefits.html">View your estimated monthly CPP benefits</a><br><br>
+<a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html">Return to My Service Canada Account home page</a><br><br>
 	
 	
 </section>
