--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions-fr.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions-fr.html
@@ -413,7 +413,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 	<li><a href="###">Request a Statement of Contributions by mail</a></li><br>
 	</ul>
 
-<p><a href="###">Consultez vos estimations des prestations mensuelles du RPC</a></p><br><br>
+<p><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/estimated-monthly-cpp-benefits-fr.html">Consultez vos estimations des prestations mensuelles du RPC</a></p><br><br>
 <p><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html">Retour au Régime de pensions du Canada / Sécurité de la vieillesse</a><br><br></p>
 	
 	
