--- a/scenarioA/services/my-account/MSCA/EI/Tax_Slips/Tax_Slips_T4E.html
+++ b/scenarioA/services/my-account/MSCA/EI/Tax_Slips/Tax_Slips_T4E.html
@@ -159,8 +159,8 @@
 	</ul>
   	<p>You will be able to get your tax slips online earlier rather than waiting for them to arrive by mail. To get your tax slip online, select "Online" using the"</p><a href="#">Change My Tax Slip Delivery</a>" feature. You can reactivate the mail option using the same feature.<br><br>
   	Below are your <strong>Canada Pension Plan (CPP) and/or Old Age Security (OAS) and Employment Insurance (EI) [changes depending on user] </strong>tax slips for current and/or previous years.<br><br>Depending on which benefits you are receiving, you may have more than one tax slip.<br><br>When initially opened, "View Tax Slips" shows your slips for the current tax year. If you have not received any payments under Canada Pension Plan (CPP), Old Age Security (OAS) or Employment Insurance (EI) during the current tax year, the page will read "You have no tax slips for YYYY" (current year).</p><br>
-	<div class="col-md-12 brdr-tp"><strong>Tax Slips for 2018</strong></div><br><br>
-	<p>--Below is a list of <strong>all</strong> possible tax slips that are available to the clients.--</p>
+	<div class="col-md-12 brdr-tp"><strong>Tax Slips for 2019</strong></div><br><br>
+	<!--<p>--Below is a list of <strong>all</strong> possible tax slips that are available to the clients.--</p>-->
 	<p><strong>CPP and/or OAS Tax Slips</strong></p>
 	
 	<ul>
