--- a/scenarioA/services/my-account/MSCA/EI/Tax_Slips/Tax_Slips_T4E-fr.html
+++ b/scenarioA/services/my-account/MSCA/EI/Tax_Slips/Tax_Slips_T4E-fr.html
@@ -258,9 +258,11 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 	 
     <p>À l'ouverture, la page « Visualiser les feuillets de renseignements fiscaux » montre vos feuillets pour l'année d'imposition en cours. Si vous n'avez pas reçu aucune prestations du Régime de Pensions du Canada (RPC) ou de la Sécurité de la vieillesse (SV) ni de prestations d'assurance-emploi (a.-e.) durant l'année d'imposition en cours, cette page affichera le message « Vous n'avez pas de feuillet de renseignements fiscaux pour AAAA » (année en cours)</p>
 
-	<div class="col-md-12 brdr-tp"><strong>Feuillets de renseignements fiscaux pour 2018</strong></div><br><br>
-	<p>--Voici une liste de tous les feuillets de renseignements fiscaux disponibles pour les clients, veuillez choisir les relevés qui s&rsquo;appliquent.--</p>
-	<p>Feuillets de renseignements fiscaux pour le RPC ou la SV</p>
+	<hr />
+		
+		<h2>Feuillets de renseignements fiscaux pour 2019</h2>
+	<!--<p>--Voici une liste de tous les feuillets de renseignements fiscaux disponibles pour les clients, veuillez choisir les relevés qui s&rsquo;appliquent.--</p>-->
+	<p><strong>Feuillets de renseignements fiscaux pour le RPC ou la SV</strong></p>
 	
 	<ul>
 	  <li><a href="">IA T4A (P) - Retraite / Invalidité / Survivant / etc... - <strong>Original / Modification / Duplicata / Annuler</strong></strong></a><br />
