--- a/scenarioA/services/my-account/MSCA/EI/past-claims.html
+++ b/scenarioA/services/my-account/MSCA/EI/past-claims.html
@@ -151,8 +151,8 @@
 	<main class="container" property="mainContentOfPage" role="main"><span id="pageTemplate:j_id__ctru6pc6" class="af_panelGroupLayout">
   <h1 property="name" id="wb-cont" dir="ltr">My Past Claims</h1>
   
-  <p>We have no past claim information for you.</p>
-	<p><strong>- OR - alternate message</strong></p>
+  <!--<p>We have no past claim information for you.</p>
+	<p><strong>- OR - alternate message</strong></p>-->
 	
 	<table class="table table-bordered" style="width:100%">
 	 <tbody>
