--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html
@@ -286,7 +286,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       </div>
     </div>
     <div class="col-xs-12 col-md-9">
-      <p>Consultez nos outils en ligne sur la pension pour le Régime de pensions du Canada (RPC), la Sécurité de vieillesse (SV) et le Supplément de revenu garanti (SRG) ci-dessous.</p>
+      <p>Consultez nos outils en ligne sur la pension pour le Régime de pensions du Canada (RPC), la Sécurité de la vieillesse (SV) et le Supplément de revenu garanti (SRG) ci-dessous.</p>
 <div class="panel panel-default">
         <div class="panel-body">
           <div class="mrgn-tp-md header-bg">
@@ -370,7 +370,8 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
           <br />
           <p>Dans cette section, vous pouvez consulter vos renseignements relatifs  aux versements du RPC et de la SV.</p>
 <ul class="list-unstyled list-inline">
-			<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Payment-Info-fr.html';" type="button" class="btn btn-default">Renseignements de paiement</button></li>
+			<li class="mrgn-bttm-sm">
+			  <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Payment-Info-fr.html';" type="button" class="btn btn-default">Renseignements de paiements</button></li>
 		  </ul>
         </div>
       </div>
