--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
@@ -253,7 +253,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
         <ul class="list-group">
           <li class="list-group-item"><a href="#a1-1">CPP Applications</a></li>
           <li class="list-group-item"><a href="#a1-2">OAS/GIS Pension Applications</a></li>
-           <li class="list-group-item"><a href="#a1-6">Child-Rearing Provision</a></li>
+           <li class="list-group-item"><a href="#a1-6">Child-rearing provision</a></li>
 			<li class="list-group-item"><a href="#a1-7">Tax Information</a></li>
 			<li class="list-group-item"><a href="#a1-3">View/Change my Personal Information</a></li>
           <li class="list-group-item"><a href="#a1-4">Payments</a></li>
@@ -295,7 +295,8 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
           
 			<ul class="list-unstyled list-inline">
 				<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/Apply-for-CPP-benifits/CPP-Retirement.html';" type="button" class="btn btn-default">Apply for my CPP retirement pension</button></li>
-         <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/Apply-for-CPP-benifits/CPP-disability.html';" type="button" class="btn btn-default">Apply for my CPP disability benefit</button></li>
+         <li class="mrgn-bttm-sm">
+           <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/Apply-for-CPP-benifits/CPP-disability.html';" type="button" class="btn btn-default">Apply for my CPP disability benefits</button></li>
           <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Application-status.html';" type="button" class="btn btn-default">Application status</button></li>
 			</ul>
         </div>
@@ -320,14 +321,16 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 		<div class="panel panel-default">
         <div class="panel-body">
           <div class="mrgn-tp-md header-bg">
-            <h2 id="a1-6" class="mrgn-tp-0">Child-Rearing Provision&nbsp;</h2>
+            <h2 id="a1-6" class="mrgn-tp-0">Child-rearing provision&nbsp;</h2>
             <div class="brdr-bttm-fade"></div>
           </div>
           <br />
           <p>If you took time off from work or worked less to look after your young children, you may be able to increase the amount of your CPP retirement pension and other CPP benefits by applying for the child-rearing provisions.</p>
           <ul class="list-unstyled list-inline">
-				<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Request-Child-Rearing-Provision.html';" type="button" class="btn btn-default">Request my Child-Rearing Provision</button></li>
-          <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Child-Rearing-Provision-Confirm-Info.html';" type="button" class="btn btn-default">My Child-Rearing Provision</button></li>
+				<li class="mrgn-bttm-sm">
+				  <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Request-Child-Rearing-Provision.html';" type="button" class="btn btn-default">Request my child-rearing provision</button></li>
+          <li class="mrgn-bttm-sm">
+            <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Child-Rearing-Provision-Confirm-Info.html';" type="button" class="btn btn-default">My child-rearing provision</button></li>
 			</ul>
         </div>
       </div>
@@ -368,7 +371,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
             <div class="brdr-bttm-fade"></div>
           </div>
           <br />
-          <p>In this section,  you can view your CPP and OAS Payment Information.</p>
+          <p>In this section,  you can view your CPP and OAS Payment information.</p>
           <ul class="list-unstyled list-inline">
 			<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Payment-Info.html';" type="button" class="btn btn-default">Payment information</button></li>
 		  </ul>
