--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions.html
@@ -163,18 +163,18 @@
 
 <table class="table table-bordered" style="width:100%">
 	<tr>
-		<th style="text-align:center" rowspan="2">Year</th>
-	<th style="text-align:center" colspan="4">Your contributions</th>
-		<th style="text-align:center" colspan="3">Your pensionable earnings</th>
+		<th class="active" style="text-align:center" rowspan="2">Year</th>
+	<th class="active" style="text-align:center" colspan="4">Your contributions</th>
+		<th class="active" style="text-align:center" colspan="3">Your pensionable earnings</th>
 	</tr>
   <tr>
     
-    <th style="text-align:center">Base portion</th>
-    <th style="text-align:center">First additional portion</th>
-    <th style="text-align:center">Second additional portion</th>
-	  <th style="text-align:center">Total</th>
-    <th style="text-align:center">Base portion</th>
-    <th style="text-align:center">First additional portion</th>
+    <th class="active" style="text-align:center">Base portion</th>
+    <th class="active" style="text-align:center">First additional portion</th>
+    <th class="active" style="text-align:center">Second additional portion</th>
+	  <th class="active" style="text-align:center">Total</th>
+    <th class="active" style="text-align:center">Base portion</th>
+    <th class="active" style="text-align:center">First additional portion</th>
 	  <th style="text-align:center">Second additional portion</th>
   </tr>
   <tr>
