--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions-fr.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions-fr.html
@@ -254,19 +254,19 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 
 <table class="table table-bordered" style="width:100%">
 	<tr>
-		<th style="text-align:center" rowspan="2">Année</th>
-	<th style="text-align:center" colspan="4">Vos cotisations</th>
-		<th style="text-align:center" colspan="3">Vos gains ouvrant droit à pension</th>
+		<th class="active" style="text-align:center" rowspan="2">Année</th>
+	<th class="active" style="text-align:center" colspan="4">Vos cotisations</th>
+		<th class="active" style="text-align:center" colspan="3">Vos gains ouvrant droit à pension</th>
 	</tr>
   <tr>
     
-    <th style="text-align:center">Portion de base</th>
-    <th style="text-align:center">Première portion supplémentaire</th>
-    <th style="text-align:center">Deuxième portion supplémentaire</th>
-	  <th style="text-align:center">Total</th>
-    <th style="text-align:center">Portion de base</th>
-    <th style="text-align:center">Première portion supplémentaire</th>
-	  <th style="text-align:center">Deuxième portion supplémentaire</th>
+    <th class="active" style="text-align:center">Portion de base</th>
+    <th class="active" style="text-align:center">Première portion supplémentaire</th>
+    <th class="active" style="text-align:center">Deuxième portion supplémentaire</th>
+	  <th class="active" style="text-align:center">Total</th>
+    <th class="active" style="text-align:center">Portion de base</th>
+    <th class="active" style="text-align:center">Première portion supplémentaire</th>
+	  <th class="active" style="text-align:center">Deuxième portion supplémentaire</th>
   </tr>
   <tr>
     <th style="text-align:center">2016</th>
