--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions-fr.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions-fr.html
@@ -269,7 +269,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 	  <th class="active" style="text-align:center">Deuxième portion supplémentaire</th>
   </tr>
   <tr>
-    <th style="text-align:center">2016</th>
+    <th class="active" style="text-align:center">2016</th>
     <td style="text-align:center">21.76 $</td>
     <td style="text-align:center">&nbsp;</td>
     <td style="text-align:center">&nbsp;</td>
@@ -279,7 +279,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
     <td style="text-align:center">&nbsp;</td>
   </tr>
   <tr>
-    <th style="text-align:center">2017</th>
+    <th class="active" style="text-align:center">2017</th>
     <td style="text-align:center">2,200.00 $</td>
     <td style="text-align:center">&nbsp;</td>
     <td style="text-align:center">&nbsp;</td>
@@ -289,7 +289,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
     <td style="text-align:center">&nbsp;</td>
   </tr>
   <tr>
-    <th style="text-align:center">2018</th>
+    <th class="active" style="text-align:center">2018</th>
     <td style="text-align:center">2,549.25 $</td>
     <td style="text-align:center">&nbsp;</td>
     <td style="text-align:center">&nbsp;</td>
@@ -299,7 +299,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
     <td style="text-align:center">&nbsp;</td>
   </tr>
   <tr>
-    <th style="text-align:center">2019</th>
+    <th class="active" style="text-align:center">2019</th>
     <td style="text-align:center">2,781.90 $</td>
     <td style="text-align:center">84.30 $</td>
     <td style="text-align:center">&nbsp;</td>
@@ -309,7 +309,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
     <td style="text-align:center">&nbsp;</td>
   </tr>
   <tr>
-    <th style="text-align:center">2020</th>
+    <th class="active" style="text-align:center">2020</th>
     <td style="text-align:center">2,871.00 $</td>
     <td style="text-align:center">174.00 $</td>
     <td style="text-align:center">&nbsp;</td>
@@ -319,7 +319,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
     <td style="text-align:center">&nbsp;</td>
   </tr>
   <tr>
-    <th style="text-align:center">2021</th>
+    <th class="active" style="text-align:center">2021</th>
     <td style="text-align:center">2,979.90 $</td>
     <td style="text-align:center">301.00 $</td>
     <td style="text-align:center">&nbsp;</td>
@@ -329,7 +329,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
     <td style="text-align:center">&nbsp;</td>
   </tr>
   <tr>
-    <th style="text-align:center">2022</th>
+    <th class="active" style="text-align:center">2022</th>
     <td style="text-align:center">3,073.95 $</td>
     <td style="text-align:center">465.75 $</td>
     <td style="text-align:center">&nbsp;</td>
@@ -339,7 +339,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
     <td style="text-align:center">&nbsp;</td>
   </tr>
    <tr>
-    <th style="text-align:center">2023</th>
+    <th class="active" style="text-align:center">2023</th>
     <td style="text-align:center">3,237.30 $</td>
     <td style="text-align:center">654.00 $</td>
     <td style="text-align:center">&nbsp;</td>
@@ -349,7 +349,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
     <td style="text-align:center">&nbsp;</td>
   </tr>
    <tr>
-    <th style="text-align:center">2024</th>
+    <th class="active" style="text-align:center">2024</th>
     <td style="text-align:center">3,415.50 $</td>
     <td style="text-align:center">690.00 $</td>
     <td style="text-align:center">203.00 $</td>
@@ -359,7 +359,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
     <td style="text-align:center">5,075.00 $  M</td>
   </tr>
    <tr>
-    <th style="text-align:center">2025</th>
+    <th class="active" style="text-align:center">2025</th>
     <td style="text-align:center">3,445.20 $</td>
     <td style="text-align:center">696.00 $</td>
     <td style="text-align:center">406.00 $</td>
@@ -369,7 +369,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
     <td style="text-align:center">10,150.00 $  M</td>
   </tr>
   <tr>
-    <th style="text-align:center">2026</th>
+    <th class="active" style="text-align:center">2026</th>
     <td style="text-align:center">3,479.85 $</td>
     <td style="text-align:center">703.00 $</td>
     <td style="text-align:center">240.00 $</td>
