--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions.html
@@ -175,10 +175,10 @@
 	  <th class="active" style="text-align:center">Total</th>
     <th class="active" style="text-align:center">Base portion</th>
     <th class="active" style="text-align:center">First additional portion</th>
-	  <th style="text-align:center">Second additional portion</th>
+	  <th class="active" style="text-align:center">Second additional portion</th>
   </tr>
   <tr>
-    <th style="text-align:center">2016</th>
+    <th class="active" style="text-align:center">2016</th>
     <td style="text-align:center">21.76 $</td>
     <td style="text-align:center">&nbsp;</td>
     <td style="text-align:center">&nbsp;</td>
@@ -188,7 +188,7 @@
     <td style="text-align:center">&nbsp;</td>
   </tr>
   <tr>
-    <th style="text-align:center">2017</th>
+    <th class="active" style="text-align:center">2017</th>
     <td style="text-align:center">2,200.00 $</td>
     <td style="text-align:center">&nbsp;</td>
     <td style="text-align:center">&nbsp;</td>
@@ -198,7 +198,7 @@
     <td style="text-align:center">&nbsp;</td>
   </tr>
   <tr>
-    <th style="text-align:center">2018</th>
+    <th class="active" style="text-align:center">2018</th>
     <td style="text-align:center">2,549.25 $</td>
     <td style="text-align:center">&nbsp;</td>
     <td style="text-align:center">&nbsp;</td>
@@ -208,7 +208,7 @@
     <td style="text-align:center">&nbsp;</td>
   </tr>
   <tr>
-    <th style="text-align:center">2019</th>
+    <th class="active" style="text-align:center">2019</th>
     <td style="text-align:center">2,781.90 $</td>
     <td style="text-align:center">84.30 $</td>
     <td style="text-align:center">&nbsp;</td>
@@ -218,7 +218,7 @@
     <td style="text-align:center">&nbsp;</td>
   </tr>
   <tr>
-    <th style="text-align:center">2020</th>
+    <th class="active" style="text-align:center">2020</th>
     <td style="text-align:center">2,871.00 $</td>
     <td style="text-align:center">174.00 $</td>
     <td style="text-align:center">&nbsp;</td>
@@ -228,7 +228,7 @@
     <td style="text-align:center">&nbsp;</td>
   </tr>
   <tr>
-    <th style="text-align:center">2021</th>
+    <th class="active" style="text-align:center">2021</th>
     <td style="text-align:center">2,979.90 $</td>
     <td style="text-align:center">301.00 $</td>
     <td style="text-align:center">&nbsp;</td>
@@ -238,7 +238,7 @@
     <td style="text-align:center">&nbsp;</td>
   </tr>
   <tr>
-    <th style="text-align:center">2022</th>
+    <th class="active" style="text-align:center">2022</th>
     <td style="text-align:center">3,073.95 $</td>
     <td style="text-align:center">465.75 $</td>
     <td style="text-align:center">&nbsp;</td>
@@ -248,7 +248,7 @@
     <td style="text-align:center">&nbsp;</td>
   </tr>
    <tr>
-    <th style="text-align:center">2023</th>
+    <th class="active" style="text-align:center">2023</th>
     <td style="text-align:center">3,237.30 $</td>
     <td style="text-align:center">654.00 $</td>
     <td style="text-align:center">&nbsp;</td>
@@ -258,7 +258,7 @@
     <td style="text-align:center">&nbsp;</td>
   </tr>
    <tr>
-    <th style="text-align:center">2024</th>
+    <th class="active" style="text-align:center">2024</th>
     <td style="text-align:center">3,415.50 $</td>
     <td style="text-align:center">690.00 $</td>
     <td style="text-align:center">203.00 $</td>
@@ -268,7 +268,7 @@
     <td style="text-align:center">5,075.00 $  M</td>
   </tr>
    <tr>
-    <th style="text-align:center">2025</th>
+    <th class="active" style="text-align:center">2025</th>
     <td style="text-align:center">3,445.20 $</td>
     <td style="text-align:center">696.00 $</td>
     <td style="text-align:center">406.00 $</td>
@@ -278,7 +278,7 @@
     <td style="text-align:center">10,150.00 $  M</td>
   </tr>
   <tr>
-    <th style="text-align:center">2026</th>
+    <th class="active" style="text-align:center">2026</th>
     <td style="text-align:center">3,479.85 $</td>
     <td style="text-align:center">703.00 $</td>
     <td style="text-align:center">240.00 $</td>
