--- a/scenarioA/services/my-account/MSCA/EI/eForm/mistakes-can-happen-fr.html
+++ b/scenarioA/services/my-account/MSCA/EI/eForm/mistakes-can-happen-fr.html
@@ -193,6 +193,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
         <div id="mb-pnl"></div>
       </nav>
     </div>
+
     <nav role="navigation" id="wb-sm" data-trgt="mb-pnl" class="wb-menu visible-md visible-lg" typeof="SiteNavigationElement">
       <div class="pnl-strt container nvbar" lang="en">
        <h2 class="wb-inv">Topics menu</h2>
@@ -203,7 +204,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
             <li> <a href="#section1" class="item">Assurance-emploi</a>
               <ul class="sm list-unstyled" id="section1" role="menu">
                 <!--<li><a href="###">Status of my EI claim/application</a></li>-->
-                <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/EI-payment-page-fr.html">Renseignements sur votre dernière demande</a></li>
+                <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/EI-payment-page-fr.html">Renseignements de paiements</a></li>
                  <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/records-of-employment-fr.html">Relevés d'emploi</a></li>
 				  <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/latest-claim-details-fr.html">Dernière demande</a></li>
                
@@ -224,6 +225,8 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
         </div>
       </div>
     </nav>
+   
+
     <nav role="navigation" id="wb-bc" property="breadcrumb">
       <h2>Vous êtes ici</h2>
       <div class="container">
