--- a/scenarioA/services/my-account/chooser-page.html
+++ b/scenarioA/services/my-account/chooser-page.html
@@ -217,7 +217,8 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
 		
 <aside class="col-xs-12 col-md-6">
 	<div class="clearfix mrgn-bttm-md visible-xs visible-sm"></div>
-	<div class="well well-sm small brdr-0 hght-inhrt mrgn-bttm-0"><h2 class="mrgn-tp-0 h3">Ask our Chatbot!</h2><p>Our Chatbot pilot can guide you with general questions about MSCA. It cannot check the status of your application(s) or be used to submit complaints.</p><p><a href="">Terms of Use and Information Statement</a></p><button id="sccChatBtn" class="btn btn-lg btn-primary scc-chat-btn scc-chat-btn-add">Launch chatbot</button></div><div id="sccChat"></div>
+	<div class="well well-sm small brdr-0 hght-inhrt mrgn-bttm-0"><h2 class="mrgn-tp-0 h3">Ask our Chatbot!</h2><p>Our chatbot pilot can guide you with questions on how to register for MSCA.</p>
+	<p><a href="">Terms of Use and Information Statement</a></p><button id="sccChatBtn" class="btn btn-lg btn-primary scc-chat-btn scc-chat-btn-add">Launch chatbot</button></div><div id="sccChat"></div>
 </aside>		
 </div>	
 	<p>My Service Canada Account (MSCA) is a secure online portal that lets you apply, view and update your information for Employment Insurance (EI), Canada Pension Plan (CPP) and Old Age Security (OAS).</p>
@@ -344,10 +345,10 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
 <p>Contact the following programs with any questions you may have:</p>
 
 <ul class="text-center list-unstyled colcount-md-4">
-	<li class="brdr-rght"><a href="">Contact Social Insurance Number (SIN)</a></li>
-	<li class="brdr-rght"><a href="">Contact Employment Insurance (EI)</a></li>
-	<li class="brdr-rght"><a href="">Contact Canada Pension Plan (CPP)</a></li>
-	<li><a href="">Contact Old Age Security (OAS)</a></li>
+	<li class="brdr-rght"><a href="">Social Insurance Number</a></li>
+	<li class="brdr-rght"><a href="">Employment Insurance</a></li>
+	<li class="brdr-rght"><a href="">Canada Pension Plan</a></li>
+	<li><a href="">Old Age Security</a></li>
 </ul>
 </section>
      
