--- a/scenarioA/services/my-account/chooser-page-fr.html
+++ b/scenarioA/services/my-account/chooser-page-fr.html
@@ -219,7 +219,7 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
       <div class="clearfix mrgn-bttm-md visible-xs visible-sm"></div>
       <div class="well well-sm small brdr-0 hght-inhrt mrgn-bttm-0">
         <h2 class="mrgn-tp-0 h3">Poser une question à notre clavarbot!</h2>
-        <p>Notre pilote clavarbot peut vous guider avec des questions générales concernant votre compte MDSC. Il ne peut pas vérifier l&rsquo;état de votre demande ou être utilisé pour déposer une plainte.</p>
+        <p>Notre pilote clavarbot peut vous guider avec des questions concernant le processus d’inscription de MDSC.</p>
         <p><a href="#">Modalités d'utilisation et Avis d’information</a></p>
         <button id="sccChatBtn" class="btn btn-lg btn-primary scc-chat-btn scc-chat-btn-add">Lancer l'outil de clavarbot</button>
       </div>
@@ -318,10 +318,10 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
     <h2>Coordonnées</h2>
     <p>Contacter les programmes suivants si vous avez des questions :</p>
     <ul class="text-center list-unstyled colcount-md-4">
-      <li class="brdr-rght"><a href="#">Communiquer avec les responsables du numéro d’assurance sociale</a></li>
-      <li class="brdr-rght"><a href="#">Communiquer avec les responsables de l'assurance-emploi</a></li>
-      <li class="brdr-rght"><a href="#">Communiquer avec les responsables du Régime de pensions du Canada</a></li>
-      <li><a href="#">Communiquer avec les responsables de la Sécurité de la vieillesse</a></li>
+      <li class="brdr-rght"><a href="#">Numéro d’assurance sociale</a></li>
+      <li class="brdr-rght"><a href="#">Assurance-emploi</a></li>
+      <li class="brdr-rght"><a href="#">Régime de pensions du Canada</a></li>
+      <li><a href="#">Sécurité de la vieillesse</a></li>
     </ul>
   </section>
   </div>
