--- a/scenarioA/services/my-account/chooser-page.html
+++ b/scenarioA/services/my-account/chooser-page.html
@@ -218,7 +218,7 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
 <aside class="col-xs-12 col-md-6">
 	<div class="clearfix mrgn-bttm-md visible-xs visible-sm"></div>
 	<div class="well well-sm small brdr-0 hght-inhrt mrgn-bttm-0"><h2 class="mrgn-tp-0 h3">Ask our Chatbot!</h2><p>Our chatbot pilot can guide you with questions on how to register for MSCA.</p>
-	<p><a href="">Terms of Use and Information Statement</a></p><button id="sccChatBtn" class="btn btn-lg btn-primary scc-chat-btn scc-chat-btn-add">Launch chatbot</button></div><div id="sccChat"></div>
+	<p><a href="">Terms of Use</a></p><button id="sccChatBtn" class="btn btn-lg btn-primary scc-chat-btn scc-chat-btn-add">Launch chatbot</button></div><div id="sccChat"></div>
 </aside>		
 </div>	
 	<p>My Service Canada Account (MSCA) is a secure online portal that lets you apply, view and update your information for Employment Insurance (EI), Canada Pension Plan (CPP) and Old Age Security (OAS).</p>
