--- a/scenarioA/services/my-account/chooser-page-fr.html
+++ b/scenarioA/services/my-account/chooser-page-fr.html
@@ -220,7 +220,7 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
       <div class="well well-sm small brdr-0 hght-inhrt mrgn-bttm-0">
         <h2 class="mrgn-tp-0 h3">Poser une question à notre clavarbot!</h2>
         <p>Notre pilote clavarbot peut vous guider avec des questions concernant le processus d’inscription de MDSC.</p>
-        <p><a href="#">Modalités d'utilisation</a></p>
+        <p><a href="#">Modalités d'utilisation et Avis d’information</a></p>
         <button id="sccChatBtn" class="btn btn-lg btn-primary scc-chat-btn scc-chat-btn-add">Lancer l'outil de clavarbot</button>
       </div>
       <div id="sccChat"></div>
