--- a/scenarioA/services/my-account/chooser-page-fr.html
+++ b/scenarioA/services/my-account/chooser-page-fr.html
@@ -318,10 +318,10 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
     <h2>Coordonnées</h2>
     <p>Contacter les programmes suivants si vous avez des questions :</p>
     <ul class="text-center list-unstyled colcount-md-4">
-      <li class="brdr-rght"><a href="#">Numéro d’assurance sociale</a></li>
-      <li class="brdr-rght"><a href="#">Assurance-emploi</a></li>
-      <li class="brdr-rght"><a href="#">Régime de pensions du Canada</a></li>
-      <li><a href="#">Sécurité de la vieillesse</a></li>
+      <li class="brdr-rght"><a href="#">Communiquer avec les responsables du numéro d’assurance sociale</a></li>
+      <li class="brdr-rght"><a href="#">Communiquer avec les responsables de l'assurance-emploi</a></li>
+      <li class="brdr-rght"><a href="#">Communiquer avec les responsables du Régime de pensions du Canada</a></li>
+      <li><a href="#">Communiquer avec les responsables de la Sécurité de la vieillesse</a></li>
     </ul>
   </section>
   </div>
