--- a/scenarioA/services/my-account/chooser-page-fr.html
+++ b/scenarioA/services/my-account/chooser-page-fr.html
@@ -317,12 +317,12 @@ a.btn-lblue:hover, a.btn-lblue:active, a.btn-lblue:focus {
   <section>
     <h2>Coordonnées</h2>
     <p>Contacter les programmes suivants si vous avez des questions :</p>
-    <ul class="text-center list-unstyled colcount-md-4">
-      <li class="brdr-rght"><a href="#">Communiquer avec les responsables du numéro d’assurance sociale</a></li>
-      <li class="brdr-rght"><a href="#">Communiquer avec les responsables de l'assurance-emploi</a></li>
-      <li class="brdr-rght"><a href="#">Communiquer avec les responsables du Régime de pensions du Canada</a></li>
-      <li><a href="#">Communiquer avec les responsables de la Sécurité de la vieillesse</a></li>
-    </ul>
+ <ul class="wb-eqht text-center list-unstyled row wb-init">
+	<li class="brdr-rght col-md-3" style="vertical-align: top; min-height: 66px;"><a href="/fr/emploi-developpement-social/ministere/coordonnees/nas.html">Numéro d’assurance sociale</a></li>
+	<li class="brdr-rght col-md-3" style="vertical-align: top; min-height: 66px;"><a href="/fr/emploi-developpement-social/ministere/coordonnees/assurance-emploi-individus.html">Assurance-emploi</a></li>
+	<li class="brdr-rght col-md-3" style="vertical-align: top; min-height: 66px;"><a href="/fr/emploi-developpement-social/ministere/coordonnees/rpc.html">Régime de pensions du Canada</a></li>
+	<li class="col-md-3" style="vertical-align: top; min-height: 66px;"><a href="/fr/emploi-developpement-social/ministere/coordonnees/sv.html">Sécurité de la vieillesse</a></li>
+</ul>
   </section>
   </div>
   </div>
