--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions-fr.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions-fr.html
@@ -413,7 +413,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 <li>Si vous avez produit votre déclaration de revenus, vos gains et vos cotisations de l'année courante ne sont peut-être pas encore inscrits.</li>
 
 <li>Demander votre État de compte du cotisant par la poste</li>
-	<li><a href="###">Request a Statement of Contributions by mail</a></li><br>
+	<li><a href="###">Demander votre État de compte du cotisant par la poste</a></li><br>
 	</ul>
 
 <p><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/estimated-monthly-cpp-benefits-fr.html">Consultez vos estimations des prestations mensuelles du RPC</a></p><br><br>
