--- a/scenarioA/services/my-account/MSCA/EI/eForm/eForm-PNS-fr.html
+++ b/scenarioA/services/my-account/MSCA/EI/eForm/eForm-PNS-fr.html
@@ -249,15 +249,18 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
   <p><center>Date et année d'aujourd'hui <br>Votre dernière visite était * Date, Année * </center></p>
 	
 	
-	  <div class="well well-lg">
-	  <h3><bold>Énoncé de confidentialité</bold></h3>
-	   <div class="row" style="float:right">
+	  <div class="well">
+	  <div class="row">
+	  <div class="col-sm-3"><h3 class="mrgn-tp-md"><bold>Énoncé de confidentialité</bold></h3></div>
 	  
-	  <ol class="row list-unstyled text-center">
+	  <div class="col-sm-9">
+	   <div class="row">
+	  
+	  <ol class="list-unstyled text-center">
 <li class="col-sm-4">
 	<div class="row">
 		<div class="col-sm-8 col-sm-offset-2">
-		<a style="padding-bottom: 20px; display:inline-block;" class="center-block" href="###">Formulaires en ligne provisoired</a>
+		<a class="center-block" href="###">Formulaires en ligne provisoires</a>
 		</div>
 		<div class="col-sm-2">
 		</div>
@@ -266,7 +269,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 <li class="col-sm-4">
 	<div class="row">
 		<div class="col-sm-8 col-sm-offset-2">
-		<a style="padding-bottom: 20px; display:inline-block;" class="center-block" href="###">Formulaires en ligne complétés</a>
+		<a class="center-block" href="###">Formulaires en ligne complétés</a>
 		</div>
 		<div class="col-sm-2">
 		</div>
@@ -275,12 +278,13 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 <li class="col-sm-4">
 	<div class="row">
 		<div class="col-sm-8 col-sm-offset-2">
-		<a style="padding-bottom: 20px; display:inline-block;" class="center-block" href="###">Page d'acceuil de MSDC</a>
+		<a class="center-block" href="###">Page d'acceuil de MSDC</a>
 		</div>
 	</div>		
 </li>		
 </ol>
 		  </div>
+	</div>
 	</div>
 	</div>
 	
@@ -299,7 +303,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 		   <p>Les renseignements sont administrés en conformité avec les sections 48, 49 et 50 de la Loi sur l&rsquo;assurance-emploi, la Loi sur la protection des renseignements personnels et la Loi sur le MRHDC. Vous avez droit à la protection, à l&rsquo;accès et à la correction de vos renseignements personnels. Vos renseignements seront décrits dans le fichier de renseignements personnels : Prestations d&rsquo;assurance-emploi RHDCC PPU 705 (en cours d&rsquo;élaboration) et utilisés et divulgués conformément aux conditions établies.</p>
 		   <p>La marche à suivre pour présenter une demande officielle de renseignements personnels est décrite dans la publication fédérale Info Source, accessible sur le site Web <a href="#">http://www.infosource.gc.ca</a>. Vous pouvez également consulter Info Service en ligne dans tous les Centres Service Canada.</p>
 		   
-		<center><button type="button" class="btn btn-primary"><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/eForm/eForm-fr.html">Continuer</a></button></center>
+		<center><a class="btn btn-primary" href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/eForm/eForm-fr.html">Continuer</a></center>
 	  </div>
 	</section>
   
