--- a/scenarioA/services/my-account/MSCA/EI/eForm/eForm-PNS.html
+++ b/scenarioA/services/my-account/MSCA/EI/eForm/eForm-PNS.html
@@ -153,16 +153,18 @@
   <h2><center>Welcome</center></h2>
   <p><center>Today's Date and Year <br>Your last visit was *Date, Year* </center></p>
 	
-	
-	  <div class="well well-lg">
-	  <h3><bold>Privacy notice statement</bold></h3>
-	   <div class="row" style="float:right">
+	  <div class="well">
+	  <div class="row">
+	  <div class="col-sm-3"><h3 class="mrgn-tp-0"><bold>Privacy notice statement</bold></h3></div>
 	  
-	  <ol class="row list-unstyled text-center">
+	  <div class="col-sm-9">
+	   <div class="row">
+	  
+	  <ol class="list-unstyled text-center">
 <li class="col-sm-4">
 	<div class="row">
 		<div class="col-sm-8 col-sm-offset-2">
-		<a style="padding-bottom: 20px; display:inline-block;" class="center-block" href="###">Draft eForms</a>
+		<a class="center-block" href="###">Draft eForms</a>
 		</div>
 		<div class="col-sm-2">
 		</div>
@@ -171,7 +173,7 @@
 <li class="col-sm-4">
 	<div class="row">
 		<div class="col-sm-8 col-sm-offset-2">
-		<a style="padding-bottom: 20px; display:inline-block;" class="center-block" href="###">Completed eForms</a>
+		<a class="center-block" href="###">Completed eForms</a>
 		</div>
 		<div class="col-sm-2">
 		</div>
@@ -180,12 +182,13 @@
 <li class="col-sm-4">
 	<div class="row">
 		<div class="col-sm-8 col-sm-offset-2">
-		<a style="padding-bottom: 20px; display:inline-block;" class="center-block" href="###">MSCA Homepage</a>
+		<a class="center-block" href="###">MSCA Homepage</a>
 		</div>
 	</div>		
 </li>		
 </ol>
 		  </div>
+	</div>
 	</div>
 	</div>
 	
@@ -199,7 +202,7 @@
 	  <div class="panel-body">
 		   <p>The information you provide is collected under the authority of sections 48, 49 and 50 of the Employment Insurance Act to determine your eligibility for Employment Insurance benefits.<br><br>The information you provide may be shared with your province/territory for the administration of the Labour Market Development Agreements. It may also be shared with Integrity Services for their use in the prevention, detection and deterrence of fraud and abuse of the Employment Insurance program.<br><br>The information you provide may also be used for evaluating the functionality and efficiency of the eForms feature.<br><br>Completion is voluntary; however, failing to provide personal information or making false or misleading statements may result in a delay or loss of benefits, and/or fines and penalties.<br><br>Your personal information is administered in accordance with sections 48, 49 and 50 of the Employment Insurance Act, the Privacy Act and the DHRSD Act. You have the right to the protection of, access to and correction of your personal information. It will be described in the following Personal Information Bank: Employment Insurance Benefits HRSDC PPU 705 (under development) and will be used and disclosed in accordance with the conditions listed therein.<br><br>Instructions for making formal requests about your personal information are outlined in the government publication entitled Info Source, which is available at the following web site address:  <a href="http://www.infosource.gc.ca. ">http://www.infosource.gc.ca. </a>Info Source may also be accessed online at any Service Canada Centre.<br><br>
 			</p>
-			<center><button type="button" class="btn btn-primary"><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/eForm/eForm.html">Continue</a></button></center>
+			<center><a class="btn btn-primary" href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/eForm/eForm.html">Continue</a></center>
 	  </div>
 	</section>
   
