Additional misc changes

--- a/scenarioA/services/my-account/MSCA/EI/eForm/eForm-fr.html
+++ b/scenarioA/services/my-account/MSCA/EI/eForm/eForm-fr.html
@@ -250,16 +250,18 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
   <p><center>Date et année d'aujourd'hui <br>Votre dernière visite était * Date, Année * </center></p>
 	
 	
-	  <div class="well well-lg">
-	  <h3><bold>Assurance-emploi - Formulaires en ligne</bold>
-	  </h3>
-	   <div class="row" style="float:right">
+	  <div class="well">
+	  <div class="row">
+	  <div class="col-sm-3"><h3 class="mrgn-tp-md"><bold>Assurance-emploi - Formulaires en ligne</bold></h3></div>
 	  
-	 <ol class="row list-unstyled text-center">
+	  <div class="col-sm-9">
+	   <div class="row">
+	  
+	  <ol class="list-unstyled text-center">
 <li class="col-sm-4">
 	<div class="row">
 		<div class="col-sm-8 col-sm-offset-2">
-		<a style="padding-bottom: 20px; display:inline-block;" class="center-block" href="###">Formulaires en ligne provisoired</a>
+		<a class="center-block" href="###">Formulaires en ligne provisoires</a>
 		</div>
 		<div class="col-sm-2">
 		</div>
@@ -268,7 +270,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 <li class="col-sm-4">
 	<div class="row">
 		<div class="col-sm-8 col-sm-offset-2">
-		<a style="padding-bottom: 20px; display:inline-block;" class="center-block" href="###">Formulaires en ligne complétés</a>
+		<a class="center-block" href="###">Formulaires en ligne complétés</a>
 		</div>
 		<div class="col-sm-2">
 		</div>
@@ -277,13 +279,14 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 <li class="col-sm-4">
 	<div class="row">
 		<div class="col-sm-8 col-sm-offset-2">
-		<a style="padding-bottom: 20px; display:inline-block;" class="center-block" href="###">Page d'acceuil de MSDC</a>
+		<a class="center-block" href="###">Page d'acceuil de MSDC</a>
 		</div>
 	</div>		
 </li>		
 </ol>
-	    </div>
-  </div>
+		  </div>
+	</div>
+	</div>
 	</div>
 	
 	 
