--- a/scenarioA/services/my-account/MSCA/EI/eForm/eForm.html
+++ b/scenarioA/services/my-account/MSCA/EI/eForm/eForm.html
@@ -154,16 +154,18 @@
   <p><center>Today's Date and Year <br>Your last visit was *Date, Year* </center></p>
 	
 	
-	  <div class="well well-lg">
-	  <h3><bold>Employment Insurance</bold>
-	  </h3>
-	   <div class="row" style="float:right">
+	  <div class="well">
+	  <div class="row">
+	  <div class="col-sm-3"><h3 class="mrgn-tp-0"><bold>Employment Insurance</bold></h3></div>
 	  
-	  <ol class="row list-unstyled text-center">
+	  <div class="col-sm-9">
+	   <div class="row">
+	  
+	  <ol class="list-unstyled text-center">
 <li class="col-sm-4">
 	<div class="row">
 		<div class="col-sm-8 col-sm-offset-2">
-		<a style="padding-bottom: 20px; display:inline-block;" class="center-block" href="###">Draft eForms</a>
+		<a class="center-block" href="###">Draft eForms</a>
 		</div>
 		<div class="col-sm-2">
 		</div>
@@ -172,7 +174,7 @@
 <li class="col-sm-4">
 	<div class="row">
 		<div class="col-sm-8 col-sm-offset-2">
-		<a style="padding-bottom: 20px; display:inline-block;" class="center-block" href="###">Completed eForms</a>
+		<a class="center-block" href="###">Completed eForms</a>
 		</div>
 		<div class="col-sm-2">
 		</div>
@@ -181,13 +183,14 @@
 <li class="col-sm-4">
 	<div class="row">
 		<div class="col-sm-8 col-sm-offset-2">
-		<a style="padding-bottom: 20px; display:inline-block;" class="center-block" href="###">MSCA Homepage</a>
+		<a class="center-block" href="###">MSCA Homepage</a>
 		</div>
 	</div>		
 </li>		
 </ol>
-	    </div>
-  </div>
+		  </div>
+	</div>
+	</div>
 	</div>
 	
 	 
