--- a/scenarioA/services/my-account/MSCA/EI/eForm/eForm-fr.html
+++ b/scenarioA/services/my-account/MSCA/EI/eForm/eForm-fr.html
@@ -252,7 +252,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 	
 	  <div class="well">
 	  <div class="row">
-	  <div class="col-sm-3"><h3 class="mrgn-tp-md"><bold>Assurance-emploi - Formulaires en ligne</bold></h3></div>
+	  <div class="col-sm-3"><h3 class="mrgn-tp-0"><bold>Assurance-emploi - Formulaires en ligne</bold></h3></div>
 	  
 	  <div class="col-sm-9">
 	   <div class="row">
